--- a/HIPHOP_PLAYLIST/hiphop_playlist.css
+++ b/HIPHOP_PLAYLIST/hiphop_playlist.css
@@ -1,19 +1,25 @@
 h1{
-    font-size: 100px;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
     margin-bottom: 100px;
+    color:white;
 }
-img{
-    width: 450px;
-    height: 450px;
-    margin:30px;
+button{
+    width: 220px;
+    height: 220px;
+    margin:20px;
+    background-color: rgb(0, 0, 0);
+    border-style: none;
+    transition: transform .4s;
 }
-#container{
-    width: 800px;
-    height: 600px;
-    background-color: rgb(129, 44, 44);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btnhover:hover{
+    transform:scale(1.4);
+}
+button > img {
+    width: 200px;
+    height: 200px;
+}
+body{
+    background-color: rgb(0, 0, 0);
+    text-align: center;
 }
